[package]
name = "sniffer_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
pnet = { version = "0.30.0", features = ["serde"] }
log = "0.4.0"
erased-serde = { version = "0.3.23" }
httparse = { version = "1.7.1"}
