[package]
name = "sniffer_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
pnet = { version = "0.31.0", features = ["serde", "std"] }
log = "0.4.0"
erased-serde = { version = "0.3.23" }
httparse = "1.8.0"
mime = "0.3.16"
mime_multipart = "0.6.0"
flate2 = "1.0.24"
encoding_rs = "0.8.31"
tls-parser =  { version = "0.11.0", features = ["serialize"]}
x509-parser = "0.14.0"
dns-parser = "0.8.0"
simple-dns = "0.4.7"

[features]
utils = []
